--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,9 @@ body._lock {
 }
 
 ._container {
-  max-width: 1230px;
+  max-width: 1220px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .button {
@@ -964,7 +965,20 @@ body.ie ._ibg img {
   left: 0;
   width: 85%;
   height: 100vh;
-  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 20;
   -webkit-transform: translate(-100%, 0px);
       -ms-transform: translate(-100%, 0px);
           transform: translate(-100%, 0px);
@@ -989,6 +1003,14 @@ body.ie ._ibg img {
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
+}
+
+.header__menu-mob_image {
+  margin: 0px 0px 50px 0px;
+}
+
+.header__menu-mob_image img {
+  width: 80%;
 }
 
 .header__menu-item:not(:last-child) {
@@ -1072,6 +1094,125 @@ body.ie ._ibg img {
 
 .icon-menu {
   display: none;
+}
+
+.footer__container {
+  max-width: 1230px;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding-left: 100%;
+  padding-bottom: 29.2%;
+}
+
+.footer__contacts {
+  margin-left: 20px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 340px;
+          flex: 0 0 340px;
+}
+
+.footer__text {
+  font-family: "RobotoSlab", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #001e64;
+  width: 100%;
+  padding: 0px 0px 30px 0px;
+}
+
+.footer__text span {
+  display: block;
+}
+
+.footer__mail {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 21px;
+  color: #232222;
+  padding: 0px 0px 30px 0px;
+}
+
+.footer__mail a {
+  display: block;
+  color: inherit;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: relative;
+}
+
+.footer__mail a::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0px);
+      -ms-transform: translate(-50%, 0px);
+          transform: translate(-50%, 0px);
+  background-color: #232222;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__phone {
+  font-size: 18px;
+  line-height: 21px;
+  color: #232222;
+  padding: 0px 0px 30px 0px;
+}
+
+.footer__phone a {
+  color: inherit;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: relative;
+}
+
+.footer__phone a::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0px);
+      -ms-transform: translate(-50%, 0px);
+          transform: translate(-50%, 0px);
+  background-color: #232222;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__adress {
+  font-size: 18px;
+  line-height: 21px;
+  color: #232222;
+}
+
+.footer__adress span {
+  display: block;
 }
 
 .page {
@@ -1203,10 +1344,6 @@ body.ie ._ibg img {
 
 .info-page {
   margin-top: 50px;
-}
-
-.info-page__container {
-  padding: 0 15px;
 }
 
 .info-page__inner {
@@ -1447,6 +1584,7 @@ body.ie ._ibg img {
   background-size: cover;
   background-position: center;
   padding-bottom: 98px;
+  margin: 0px 0px 100px 0px;
 }
 
 .benefits__body {
@@ -1457,9 +1595,6 @@ body.ie ._ibg img {
   grid-gap: 0px 100px;
   z-index: 2;
 }
-
-._no-webp .benefits__item{
-  background-image: url(../img/benefits/01.png); }
 
 .benefits__item {
   position: relative;
@@ -1474,6 +1609,7 @@ body.ie ._ibg img {
           align-items: center;
   height: 167px;
   width: 185px;
+  background-image: url(../img/benefits/01.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1487,6 +1623,81 @@ body.ie ._ibg img {
   text-align: center;
   color: #ffffff;
   max-width: 150px;
+}
+
+.seafood {
+  margin: 0px 0px 100px 0px;
+}
+
+.seafood__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  margin: 0px 0px 50px 0px;
+}
+
+.seafood__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.seafood__title {
+  font-family: "RobotoSlab", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
+  color: #001e64;
+  max-width: 490px;
+  padding: 0px 0px 30px 0px;
+}
+
+.seafood__text {
+  max-width: 420px;
+  line-height: 120%;
+  color: #232222;
+}
+
+.seafood__text:not(:last-child) {
+  margin: 0px 0px 20px 0px;
+}
+
+.seafood__text-mb {
+  margin: 0px 0px 50px 0px !important;
+}
+
+.seafood__image {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.blockquote {
+  text-align: center;
+  margin: 0px 0px 100px 0px;
+}
+
+.blockquote__image {
+  max-width: 800px;
+  margin: 0 auto;
+  padding-left: 20%;
+  padding-bottom: 26%;
+}
+
+.blockquote__text {
+  max-width: 700px;
+  margin: 0 auto;
+  font-family: "RobotoSlab", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #232222;
 }
 
 @media (min-width: 992px) {
@@ -1506,6 +1717,14 @@ body.ie ._ibg img {
   .header__menu-mob {
     display: none;
   }
+
+  .footer__mail a:hover::before {
+    width: 100%;
+  }
+
+  .footer__phone a:hover::before {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1670px) {
@@ -1513,14 +1732,93 @@ body.ie ._ibg img {
     min-height: 80px;
   }
 
+  .header__menu-link {
+    font-size: 18px;
+  }
+
+  ._scroll .header__logo {
+    -webkit-transform: scale(0.4) translate(-50%, -50%);
+        -ms-transform: scale(0.4) translate(-50%, -50%);
+            transform: scale(0.4) translate(-50%, -50%);
+  }
+
   .info-page {
     margin-top: 50px;
   }
+
+  .benefits {
+    margin-bottom: 80px;
+  }
+
+  .seafood {
+    margin-bottom: 80px;
+  }
+
+  .seafood__item {
+    margin-bottom: 40px;
+  }
+
+  .seafood__title {
+    padding-bottom: 25px;
+    font-size: 24px;
+  }
+
+  .seafood__text:not(:last-child) {
+    margin-bottom: 15px;
+  }
+
+  .seafood__text-mb {
+    margin-bottom: 25px !important;
+  }
+
+  .blockquote {
+    margin-bottom: 80px;
+  }
+
+  .blockquote__image {
+    max-width: 790px;
+  }
 }
 
-@media (max-width: 1670px) and (max-width: 1230px) {
+@media (max-width: 1670px) and (max-width: 1220px) {
+  .header__menu-link {
+    font-size: calc(16px + 2 * ((100vw - 320px) / 900));
+  }
+
   .info-page {
-    margin-top: calc(25px + 25 * ((100vw - 320px) / 910));
+    margin-top: calc(25px + 25 * ((100vw - 320px) / 900));
+  }
+
+  .benefits {
+    margin-bottom: calc(25px + 55 * ((100vw - 320px) / 900));
+  }
+
+  .seafood {
+    margin-bottom: calc(25px + 55 * ((100vw - 320px) / 900));
+  }
+
+  .seafood__item {
+    margin-bottom: calc(10px + 30 * ((100vw - 320px) / 900));
+  }
+
+  .seafood__title {
+    padding-bottom: calc(8px + 17 * ((100vw - 320px) / 900));
+  }
+
+  .seafood__title {
+    font-size: calc(18px + 6 * ((100vw - 320px) / 900));
+  }
+
+  .seafood__text:not(:last-child) {
+    margin-bottom: calc(5px + 10 * ((100vw - 320px) / 900));
+  }
+
+  .blockquote {
+    margin-bottom: calc(25px + 55 * ((100vw - 320px) / 900));
+  }
+
+  .blockquote__image {
+    max-width: calc(100px + 690 * ((100vw - 320px) / 900));
   }
 }
 
@@ -1593,67 +1891,89 @@ body.ie ._ibg img {
   }
 }
 
-@media (max-width: 1642px) and (max-width: 1230px) {
+@media (max-width: 1642px) and (max-width: 1220px) {
   .swiper-pagination-bullet {
-    font-size: calc(18px + 5 * ((100vw - 320px) / 910));
+    font-size: calc(18px + 5 * ((100vw - 320px) / 900));
   }
 
   .swiper-pagination-bullet:not(:last-child) {
-    margin-bottom: calc(5px + 15 * ((100vw - 320px) / 910));
+    margin-bottom: calc(5px + 15 * ((100vw - 320px) / 900));
   }
 
   .header__body {
-    height: calc(30px + 50 * ((100vw - 320px) / 910));
+    height: calc(30px + 50 * ((100vw - 320px) / 900));
   }
 
   .header__logo {
-    left: calc(0px + 13 * ((100vw - 320px) / 910));
+    left: calc(0px + 13 * ((100vw - 320px) / 900));
   }
 
   .header__logo {
-    top: calc(0px + 27 * ((100vw - 320px) / 910));
+    top: calc(0px + 27 * ((100vw - 320px) / 900));
   }
 
   .header__logo {
-    margin-right: calc(0px + 10 * ((100vw - 320px) / 910));
+    margin-right: calc(0px + 10 * ((100vw - 320px) / 900));
   }
 
   .header__logo img {
-    width: calc(30px + 70 * ((100vw - 320px) / 910));
+    width: calc(30px + 70 * ((100vw - 320px) / 900));
   }
 
   .header__menu-item:not(:last-child) {
-    margin-right: calc(10px + 15 * ((100vw - 320px) / 910));
+    margin-right: calc(10px + 15 * ((100vw - 320px) / 900));
   }
 
   .header__call {
-    margin-left: calc(0px + 130 * ((100vw - 320px) / 910));
+    margin-left: calc(0px + 130 * ((100vw - 320px) / 900));
   }
 
   .header__call {
-    margin-right: calc(0px + 35 * ((100vw - 320px) / 910));
+    margin-right: calc(0px + 35 * ((100vw - 320px) / 900));
   }
 
   .main-page__title {
-    font-size: calc(30px + 40 * ((100vw - 320px) / 910));
+    font-size: calc(30px + 40 * ((100vw - 320px) / 900));
   }
 
   .main-page__btn {
-    font-size: calc(18px + 5 * ((100vw - 320px) / 910));
+    font-size: calc(18px + 5 * ((100vw - 320px) / 900));
   }
 
   .main-page__btn {
-    margin-bottom: calc(15px + 30 * ((100vw - 320px) / 910));
+    margin-bottom: calc(15px + 30 * ((100vw - 320px) / 900));
   }
 
   .info-slider__btn {
-    font-size: calc(18px + 5 * ((100vw - 320px) / 910));
+    font-size: calc(18px + 5 * ((100vw - 320px) / 900));
+  }
+}
+
+@media (max-width: 1580px) {
+  .footer__image {
+    padding-left: 90%;
+  }
+}
+
+@media (max-width: 1470px) {
+  .footer__image {
+    padding-left: 85%;
   }
 }
 
 @media (max-width: 1440px) {
   .info-slider__body {
     padding: 0px 0px 5px 0px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .footer__image {
+    padding-left: 75%;
+  }
+
+  .footer__adress {
+    max-width: 200px;
   }
 }
 
@@ -1678,6 +1998,26 @@ body.ie ._ibg img {
   .benefits__item {
     height: 134px;
     width: 140px;
+  }
+
+  .seafood__content {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 49%;
+            flex: 0 1 49%;
+  }
+
+  .seafood__text {
+    max-width: 100%;
+  }
+
+  .seafood__image {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 49%;
+            flex: 0 1 49%;
+  }
+
+  .seafood__image img {
+    width: 100%;
   }
 }
 
@@ -1723,8 +2063,16 @@ body.ie ._ibg img {
     margin: 0px 0px 25px 0px;
   }
 
+  .header__menu-link {
+    font-size: 20px;
+  }
+
   .header__call {
     margin: 0;
+  }
+
+  .header__call img {
+    width: 80%;
   }
 
   ._scroll .header__bg {
@@ -1748,7 +2096,6 @@ body.ie ._ibg img {
   }
 
   .icon-menu {
-    margin-right: 25px;
     margin-left: 25px;
     position: relative;
     display: block;
@@ -1816,6 +2163,43 @@ body.ie ._ibg img {
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
     bottom: calc(50% - 1px);
+  }
+
+  .footer__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .footer__image {
+    padding-left: 100%;
+  }
+
+  .footer__contacts {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+    text-align: center;
+    width: 100%;
+    padding: 20px 0px 0px 0px;
+    margin-left: 0;
+  }
+
+  .footer__text {
+    padding-bottom: calc(10px + 10 * ((100vw - 320px) / 1600));
+  }
+
+  .footer__mail {
+    padding-bottom: calc(10px + 10 * ((100vw - 320px) / 1600));
+  }
+
+  .footer__phone {
+    padding-bottom: calc(10px + 10 * ((100vw - 320px) / 1600));
+  }
+
+  .footer__adress {
+    max-width: 100%;
   }
 
   .main-page__body {
@@ -1893,46 +2277,80 @@ body.ie ._ibg img {
   .info-slider__btn {
     margin: 0 auto;
   }
+
+  .seafood__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .seafood__item:nth-child(2) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+
+  .seafood__content {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
+
+  .seafood__text {
+    margin: 0px 0px 10px 0px;
+  }
+
+  .seafood__image {
+    margin: 0 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
 }
 
-@media (max-width: 992px) and (max-width: 1230px) {
+@media (max-width: 992px) and (max-width: 1220px) {
   .header__body {
-    height: calc(90px + -40 * ((100vw - 320px) / 910));
+    height: calc(90px + -40 * ((100vw - 320px) / 900));
   }
 
   .icon-menu {
-    margin-right: calc(15px + 10 * ((100vw - 320px) / 910));
-  }
-
-  .icon-menu {
-    margin-left: calc(15px + 10 * ((100vw - 320px) / 910));
+    margin-left: calc(15px + 10 * ((100vw - 320px) / 900));
   }
 
   .main-page__lang {
-    font-size: calc(14px + 4 * ((100vw - 320px) / 910));
+    font-size: calc(14px + 4 * ((100vw - 320px) / 900));
   }
 
   .title-slider__slide.swiper-slide-active .title-slider__name {
-    font-size: calc(25px + 7 * ((100vw - 320px) / 910));
+    font-size: calc(25px + 7 * ((100vw - 320px) / 900));
   }
 
   .title-slider__name {
-    font-size: calc(16px + 6 * ((100vw - 320px) / 910));
+    font-size: calc(16px + 6 * ((100vw - 320px) / 900));
   }
 
   .info-slider__image img {
-    width: calc(100px + 100 * ((100vw - 320px) / 910));
+    width: calc(100px + 100 * ((100vw - 320px) / 900));
   }
 
   .info-slider__descr {
-    margin-left: calc(5px + 43 * ((100vw - 320px) / 910));
+    margin-left: calc(5px + 43 * ((100vw - 320px) / 900));
+  }
+}
+
+@media (max-width: 820px) {
+  .blockquote__image {
+    padding-bottom: 39%;
+    max-width: 100%;
   }
 }
 
 @media (max-width: 768px) {
   .header__logo {
-    left: 5px;
-    top: 5px;
+    left: 10px;
+    top: 10px;
     -webkit-transform: scale(1) translate(0%, 0%);
         -ms-transform: scale(1) translate(0%, 0%);
             transform: scale(1) translate(0%, 0%);
@@ -1940,9 +2358,8 @@ body.ie ._ibg img {
   }
 
   ._scroll .header__logo {
-    left: 5px;
+    left: 10px;
     top: 5px;
-    text-align: left;
   }
 
   .main-page__body {
@@ -2013,17 +2430,17 @@ body.ie ._ibg img {
   }
 }
 
-@media (max-width: 530px) and (max-width: 1230px) {
+@media (max-width: 530px) and (max-width: 1220px) {
   .benefits {
-    height: calc(450px + 50 * ((100vw - 320px) / 910));
+    height: calc(450px + 50 * ((100vw - 320px) / 900));
   }
 
   .benefits__body {
-    grid-gap: calc(15px + 35 * ((100vw - 320px) / 910));
+    grid-gap: calc(15px + 35 * ((100vw - 320px) / 900));
   }
 
   .benefits__text {
-    font-size: calc(14px + 2 * ((100vw - 320px) / 910));
+    font-size: calc(14px + 2 * ((100vw - 320px) / 900));
   }
 }
 
@@ -2046,5 +2463,3 @@ body.ie ._ibg img {
 ._webp .main-page{ background-image: url(../img/header/header-bg.webp); }
 
 ._webp .benefits{ background-image: url(../img/benefits/benefits-bg.webp); }
-
-._webp .benefits__item{ background-image: url(../img/benefits/01.webp); }
